--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,22 @@
-# Use an official Node runtime as a parent image
-FROM node:14 AS build
+# Use a lightweight Node.js LTS image
+FROM node:18-alpine
 
-# Set the working directory in the container
-WORKDIR /usr/src/app
-
-# Copy the package.json and package-lock.json files to the container
-COPY package*.json ./
-
-# Install application dependencies
-RUN npm install
-
-# Copy the rest of the application code to the container
-COPY . .
-
-#Add multi-stage build
-FROM alpine:3.16.7
-
+# Set working directory
 WORKDIR /app
 
-RUN apk update && apk add --update nodejs
+# Copy package files and install dependencies
+COPY package*.json ./
+RUN npm install
 
-COPY --from=build /usr/src/app /app
+# Copy the rest of the application code
+COPY . .
 
-# Expose the port the app runs on
+# Expose the app port
 EXPOSE 5000
 
-# Define the command to run your app
+# Define environment variables
+ENV MONGO_URL=mongodb://mongo:27017/yolomy
+ENV PORT=5000
+
+# Start the app
 CMD ["node", "server.js"]
