--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,28 +1,19 @@
-# Use an official Node runtime as a parent image
+# Step 1: Build React app
 FROM node:14-slim AS build
 
-# Set the working directory in the container
 WORKDIR /usr/src/app
-
-# Copy the package.json and package-lock.json files to the container
 COPY package*.json ./
-
-# Install application dependencies
 RUN npm install
-
-# Copy the rest of the application code to the container
 COPY . .
+RUN npm run build
 
-FROM alpine:3.16.7
+# Step 2: Serve with Nginx
+FROM nginx:stable-alpine
 
-WORKDIR /app
+# Copy build files to Nginx HTML folder
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
 
-RUN apk update && apk add npm
+# Expose port
+EXPOSE 80
 
-COPY --from=build /usr/src/app /app
-
-# Expose the port the app runs on
-EXPOSE 3000
-
-# Define the command to run your app
-CMD ["npm", "start"]
+CMD ["nginx", "-g", "daemon off;"]
