--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "6.14.5",
-    "node": "13.12.0"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://yolo-backend:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
