--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,69 +1,50 @@
-#This file builds the Docker images for a React/NodeJS application and runs it as microservices on Docker containers
-
-#To ensure successful execution, clone this entire repository and execute this file while in the root folder of the cloned repository
-
-#It's also a requirement to have Docker and the docker-compose plugin installed in your environment
-
-#To launch this app without having to clone the entire repository,use the docker-compose.yaml file to run the app
-
 version: "3.8"
 
 services:
-
-  #Builds the frontend Docker image and creates the frontend microservice
-  brian-yolo-client:
-    image: brianbwire/brian-yolo-client:v1.0.0
+  # Frontend service
+  yolo-client:
     build: ./client
-    container_name: brian-yolo-client
-    stdin_open: true
-    tty: true
+    image: h1baq/yolo-client:v1.0.0
+    container_name: yolo-client
     ports:
-      - "3000:3000"
-    depends_on: 
-      - brian-yolo-backend
+      - "3000:80"   # Host 3000 -> Container 80 (Nginx)
+    depends_on:
+      - yolo-backend
     networks:
       - app-net
 
-  #Builds the backend Docker image and creates the backend microservice
-  brian-yolo-backend:
-    image: brianbwire/brian-yolo-backend:v1.0.0
+  # Backend service
+  yolo-backend:
     build: ./backend
-    container_name: brian-yolo-backend
-    stdin_open: true
-    tty: true
-    restart: always
+    image: h1baq/yolo-backend:v1.0.0
+    container_name: yolo-backend
+    environment:
+      - MONGO_URL=mongodb://mongo:27017/yolomy
+      - PORT=5000
     ports:
       - "5000:5000"
-    depends_on: 
-      - app-ip-mongo
+    depends_on:
+      - mongo
     networks:
       - app-net
 
-  #Creates the database microservice
-  app-ip-mongo:
-    image: mongo
-    container_name: app-mongo
+  # MongoDB service
+  mongo:
+    image: mongo:6
+    container_name: mongo
     ports:
       - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
     networks:
       - app-net
-    volumes:
-      - type: volume
-        source: app-mongo-data
-        target: /data/db
 
-#Creates the network infrastructure necessary for the containers to communicate with each other
+# Define shared network
 networks:
   app-net:
-    name: app-net
     driver: bridge
-    attachable: true
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16 
-          ip_range: 172.20.0.0/16 
 
-#Creates a Docker volume that persists all the data stored in the database
+# Define persistent volume for MongoDB data
 volumes:
-  app-mongo-data:
+  mongo-data:
     driver: local
