--- a/backend-deployment.yaml
+++ b/backend-deployment.yaml
@@ -2,8 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend-deployment
-  labels:
-    app: backend
+  namespace: yolo-project
 spec:
   replicas: 2
   selector:
@@ -16,29 +15,10 @@ spec:
     spec:
       containers:
         - name: backend
-          image: brianbwire/brian-yolo-backend:v1.0.0
-          command: ["npm", "start"] 
+          image: h1baq/yolo-backend:v1.0.3
+          command: ["npm", "start"]
           ports:
             - containerPort: 5000
-          resources:
-            limits:
-              memory: "256Mi"
-              cpu: "500m"
-            requests:
-              memory: "128Mi"
-              cpu: "250m"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend-service
-spec:
-  type: LoadBalancer
-  selector:
-    app: backend
-  ports:
-    - protocol: TCP
-      port: 5000
-      targetPort: 5000
-      nodePort: 30100
-  
+          env:
+          - name: MONGO_URL
+          value: "mongodb://mongo:27017/yolo"
