--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -15,22 +15,9 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: h1baq/yolo-client:v1.0.1
+          image: h1baq/yolo-client:v1.0.2
           ports:
-            - containerPort: 80  
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: frontend-service
-  namespace: yolo-project
-spec:
-  selector:
-    app: frontend
-  type: NodePort
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30001
+            - containerPort: 80
+          env:
+            - name: REACT_APP_API_URL
+              value: "http://backend-service:5000/api"
